# HardwareAansturing

./: .gitignore  CMakeLists.txt  Design document XY plotter.docx  README.md  Raspberry.md  gcode.txt  gcode_to_xy.py  kaas.gcode  plotter.hpp
Arduino_print_received_serial/: Arduino_print_received_serial.ino
Code/: g-code_to_xy_C++.cpp  gcode.txt  gcode_to_xy.py
Code/Arduino_print_received_serial/: Arduino_print_received_serial.ino  XYPlotter.cpp
Code/Code_Ros_to_arduino/: CMakeLists.txt  RPI_send_string.cpp  ros_node.cpp
Code_Ros_to_arduino/: CMakeLists.txt  RPI_send_string.cpp  ros_node.cpp
DeltaRobot/: Design Document Delta Robot.docx
DeltaRobot/Pen Houders/: Pen Holder V2 v3.stl
Display/: display.hpp  sketch_jun02a.ino
Display & Controls/: controls.hpp  display.hpp  readme.txt  sketch_jun02a.ino
Display & Controls/Display_Joystick/: Display_Joystick.ino  controls.hpp  display.hpp
Display & Controls/sketch_jun02a/: controls.hpp  display.hpp  sketch_jun02a.ino
Documentatie/: Algemene documentatie.docx  Algemenen documentatie.docx  README.md  ~$gemene documentatie.docx
Doxygen/html/: _r_e_a_d_m_e_8md.html  _raspberry_8md.html  annotated.html  annotated_dup.js  class_plotter-members.html  class_plotter.html  class_plotter.js  classes.html  files.html  files_dup.js  functions.html  functions_func.html  gcode__to__xy_8py.html  gcode__to__xy_8py.js  index.html  md__c___users_joshu__desktop__hardware_aansturing__r_e_a_d_m_e.html  md__c___users_joshu__desktop__hardware_aansturing__raspberry.html  namespacegcode__to__xy.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  pages.html  plotter_8hpp.html  plotter_8hpp_source.html
Doxygen/html/search/: all_2.js  all_4.js  all_5.js  classes_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js
Doxygen/latex/: _r_e_a_d_m_e_8md.tex  _raspberry_8md.tex  annotated.tex  class_plotter.tex  files.tex  gcode__to__xy_8py.tex  md__c___users_joshu__desktop__hardware_aansturing__r_e_a_d_m_e.tex  md__c___users_joshu__desktop__hardware_aansturing__raspberry.tex  namespacegcode__to__xy.tex  namespaces.tex  plotter_8hpp.tex  plotter_8hpp_source.tex  refman.tex
Infrastructuur-feature-working-nodes/: README.md
Infrastructuur-feature-working-nodes/install/: local_setup.sh  setup.sh
Infrastructuur-feature-working-nodes/src/Beeldverwerking/: Doxyfile  README.md  install.sh  package.xml  setup.cfg  setup.py
Infrastructuur-feature-working-nodes/src/Beeldverwerking/beeldverwerking/: listener.py
Infrastructuur-feature-working-nodes/src/Beeldverwerking/doxygen/: README_8md.html  ____init_____8py.html  annotated.html  app_8py.html  camera_8py.html  classes.html  editor_8py.html  files.html  (+60 more)
Infrastructuur-feature-working-nodes/src/Speech/: .gitignore  README.md
Infrastructuur-feature-working-nodes/src/battleship/: CMakeLists.txt  package.xml
Infrastructuur-feature-working-nodes/src/battleship/include/: SerialPort.h  SerialStream.h  SerialStreamBuf.h  display_node.hpp  ros_and_serial.hpp  sound_player_node.hpp  xy_plotter_node.hpp
Infrastructuur-feature-working-nodes/src/battleship/src/: SerialPort.cpp  SerialStream.cpp  SerialStreamBuf.cpp  display_node.cpp  ros_and_serial.cpp  sound_player_node.cpp  xy_plotter_node.cpp  xy_plotter_node.cpp.save
Infrastructuur-feature-working-nodes/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Infrastructuur-feature-working-nodes/src/receive_node/: CMakeLists.txt  package.xml
Infrastructuur-feature-working-nodes/src/send_node/: CMakeLists.txt  package.xml
Infrastructuur-feature-working-nodes/src/send_node/include/send_node/: send_node.hpp
Infrastructuur-feature-working-nodes/src/send_node/src/: main.cpp  send_node.cpp
Pen Houders/: Pen Holder v0.stl
Test_trossen_arhive/: Test_trossen_arhive.ino
VirtualPlotter/: CMakeLists.txt  ColorPicker.cpp  ColorPicker.hpp  ColorWheel.cpp  ColorWheel.hpp  ConfigState.cpp  ConfigState.hpp  DataTypes.hpp  Definitions.hpp  Exceptions.hpp  Game.cpp  Game.hpp  GameState.hpp  InputManager.cpp  InputManager.hpp  JsonManager.cpp  JsonManager.hpp  Maakfile  MainState.cpp  MainState.hpp  Makefile  StateMachine.cpp  StateMachine.hpp  StringEditors.hpp  VirtualPlotter.cpp  VirtualPlotter.hpp  VirtualPlotter.sln  VirtualPlotter.vcxproj  VirtualPlotter.vcxproj.filters  config.json  gcode.txt  main.cpp  plotter.cpp  plotter.hpp  workspace.code-workspace
VirtualPlotter/x64/Debug/: VirtualPlotter.exe.recipe  VirtualPlotter.vcxproj.FileListAbsolute.txt  vc143.idb
VirtualPlotter/x64/Debug/VirtualPlotter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VirtualPlotter.lastbuildstate  VirtualPlotter.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
VirtualPlotter/x64/Release/: gcode.txt
XY/: DataTypes.hpp  Definitions.hpp  XY.ino  XYPlotter.cpp  XYPlotter.hpp  queue.cpp
XYPlotter/: DataTypes.hpp  Definitions.hpp  XYPlotter.cpp  XYPlotter.hpp  XYPlotter.ino  plotter.hpp  queue.cpp  queue.hpp
XY_Plotter/: platformio.ini
XY_Plotter/include/: DataTypes.hpp  Definitions.hpp  XYPlotter.hpp  plotter.hpp  queue.hpp
XY_Plotter/src/: XYPlotter.cpp  main.cpp  plotter.cpp  queue.cpp
picture_to_gcode(beeldverwerking_without_ros)/: cli_picture_to_gcode.py
picture_to_gcode_beeldverwerking_without_ros/: README.md  cli_picture_to_gcode.py  dom.txt  dom2.txt  editor.py  gcode.py
ros2/install/: local_setup.sh  setup.sh
ros2/log/: latest_build
ros2/rpi_serial/: CMakeLists.txt
ros2/rpi_serial/src/: rpi_serial.hpp  subscriber_member_function.cpp
ros_and_serial/: CMakeLists.txt  package.xml
ros_and_serial/include/: ros_and_serial.hpp
ros_and_serial/include/serialib-master/: .gitignore  Doxyfile  README.md
ros_and_serial/src/: ros_and_serial.cpp
sketch_mar28a/: sketch_mar28a.ino
sketch_mar31a/: DataTypes.hpp  Definitions.hpp  XYPlotter.cpp  XYPlotter.hpp  plotter.hpp  queue.hpp  sketch_mar31a.ino
(+169 files in other folders)
